--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1> To-do list for {{ user.username }}</h1>
+<h1> To-do list for {{ current_user.username }}</h1>
 <form>
 {% for todo in todos %}
 <div><input type="checkbox" id={{todo.id}}><label for{{todo.id}}>{{ todo.title }}</label></div>
