--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,13 +12,26 @@
             {% endfor %}
         </p>
         <p>
+            {{ form.email.label }} <br>
+            {{ form.email(size=64)}} <br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{error}}]</span>
+            {% endfor %}
+        </p>
+        <p>
             {{ form.password.label }} <br>
             {{ form.password(size=32)}}
             {% for error in form.password.errors %}
             <span style="color: red;">[{{error}}]</span>
             {% endfor %}
         </p>
+        <p>
+            {{ form.password2.label }} <br>
+            {{ form.password2(size=32)}}
+            {% for error in form.password2.errors %}
+            <span style="color: red;">[{{error}}]</span>
+            {% endfor %}
+        </p>
         <p>{{form.submit() }}</p>
-        <p>New user? <a href="{{url_for('register')}}">Click to register.</a></p>
     </form>
 {% endblock %}
