--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,13 @@
 {% block content %}
 <h1> To-do list for {{ current_user.username }}</h1>
 <form>
-{% for todo in todos %}
-<div><input type="checkbox" id={{todo.id}}><label for{{todo.id}}>{{ todo.title }}</label></div>
-{% endfor %}
-</form> 
+    {% for todo in todos %}
+    <div>
+        <input type="checkbox" id={{todo.id}}>
+        <label for{{todo.id}}>
+            {{ todo.title }}
+        </label>
+    </div>
+    {% endfor %}
+</form>
 {% endblock %}
