--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,6 +18,7 @@
             <span style="color: red;">[{{error}}]</span>
             {% endfor %}
         </p>
+        <p>{{form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{form.submit() }}</p>
         <p>New user? <a href="{{url_for('register')}}">Click to register.</a></p>
     </form>
