--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -14,9 +14,25 @@
             <p> Last seen on: {{user.last_seen}}</p>
             {% endif %}
 
+            <p>{{ user.followers.count() }} followers, {{ user.followed.count()}} following.</p>
+
             <!-- if the user you're looking at is you... -->
             {% if user == current_user %}
             <p><a href= "{{url_for('edit_profile')}}">Edit your profile</a></p>
+            {% elif not current_user.is_following(user)  %}
+               <p>
+                <form action="{{ url_for('follow', username=user.username }}" method="post">
+                    {{ form.hidden_tag() }}
+                    {{ form.submit(value="Follow") }}
+                </form>
+               </p>
+            {% else  %}
+                <p>
+                <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+                    {{ form.hidden_tag() }}
+                    {{ form.submit(value='Unfollow') }}
+                </form>
+                </p>
             {% endif %}
         </td>
     </tr>
