--- a/app/templates/_task.html
+++ b/app/templates/_task.html
@@ -1,11 +1,17 @@
-<table>
-    <tr valign="top">
-        <td><img src="{{ task.author.avatar(36) }}" alt="avatar"></td>
-        <td><a href="{{ url_for("user", username=task.author.username) }}">{{ task.author.username }}</a></td>
-        {% if task.done %}
-            <td class="done">{{ task.body }}</td>
-        {% else %}
-            <td class="active">{{ task.body }}</td>
-        {% endif %}
-    </tr>
-</table>
+<table class="table table-hover">
+        <tr>
+            <td width="70px">
+                <a href="{{ url_for('user', username=task.author.username) }}">
+                    <img src="{{ task.author.avatar(70) }}" />
+                </a>
+            </td>
+            <td>
+                <a href="{{ url_for('user', username=task.author.username) }}">
+                    {{ task.author.username }}
+                </a>
+                says:
+                <br>
+                {{ task.body }}
+            </td>
+        </tr>
+    </table>
