--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,9 +3,8 @@
      UI across pages that have different functions.
 -->
 
-<html lang="en">
-
-<head>
+{% extends "bootstrap/base.html" %}
+{% block title %}
     {% if title %}
         <title>
             To-do list for {{ current_user.username }}
@@ -15,32 +14,47 @@
             To-do list
         </title>
     {% endif %}
-</head>
+{% endblock %}
 
-<body>
-<div id="navbar">
-    O.microtasks
-    <a href="{{ url_for('index') }}">Home</a>
-    <a href="{{ url_for("explore") }}">Explore</a>
-    {% if current_user.is_anonymous %}
-        <a href="{{ url_for('login') }}">Login</a>
-    {% else %}
-        <a href="{{ url_for('user', username=current_user.username) }}">{{ current_user.username }}</a>
-        <a href="{{ url_for('logout') }}">Logout</a>
-    {% endif %}
-</div>
 
-<hr>
+{% block navbar %}
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ url_for('index') }}">Microblog</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('explore') }}">Explore</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if current_user.is_anonymous %}
+                        <li><a href="{{ url_for('login') }}">Login</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
+                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+{% endblock %}
+
+{% block content %}
 {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
+        {% for message in messages %}
+            <div class="alert alert-info" role="alert">{{ message }}</div>
+        {% endfor %}
     {% endif %}
 {% endwith %}
-{% block content %}{% endblock %}
-</body>
-
-</html>
+{% block app_content %}{% endblock %}
+{% endblock %}
