--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,26 +1,13 @@
 {% extends "base.html" %}
+{% include "bootstrap/wtf.html" as wtf %}
 
-{% block content %}
+{% block app_content %}
     <h1>Sign in</h1>
-    <form action="" method="POST" novalidate>
-        {{ form.hidden_tag()}}
-        <p>
-            {{ form.username.label }} <br>
-            {{ form.username(size=32)}} <br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{error}}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }} <br>
-            {{ form.password(size=32)}}
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{error}}]</span>
-            {% endfor %}
-        </p>
-        <p>{{form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{form.submit() }}</p>
-        <p>New user? <a href="{{url_for('register')}}">Click to register.</a></p>
-        <p>Forgot password? <a href="{{ url_for("reset_password_request") }}">Click to reset.</a> </p>
-    </form>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
+    <p>New user? <a href="{{url_for('register')}}">Click to register.</a></p>
+    <p>Forgot password? <a href="{{ url_for("reset_password_request") }}">Click to reset.</a> </p>
 {% endblock %}
