--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,13 @@
 -->
 
 {% extends "bootstrap/base.html" %}
+
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+{% endblock %}
+
+
 {% block title %}
     {% if title %}
         <title>
