--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -8,6 +8,6 @@
             {{ wtf.quick_form(form) }}
         </div>
     </div>
-    <p>New user? <a href="{{url_for('register')}}">Click to register.</a></p>
-    <p>Forgot password? <a href="{{ url_for("reset_password_request") }}">Click to reset.</a> </p>
+    <p>New user? <a href="{{url_for('auth.register')}}">Click to register.</a></p>
+    <p>Forgot password? <a href="{{ url_for("auth.reset_password_request") }}">Click to reset.</a> </p>
 {% endblock %}
