--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,15 @@
                     <li><a href="{{ url_for('main.index') }}">Home</a></li>
                     <li><a href="{{ url_for('main.explore') }}">Explore</a></li>
                 </ul>
+                {% if g.search_form %}
+                    <form class="navbar-form navbar-left" method="get"
+                          action="{{ url_for('main.search') }}">
+                        <div class="form-group">
+                            {{ g.search_form.query(size=20, class='form-control',
+                            placeholder=g.search_form.query.label.text) }}
+                        </div>
+                    </form>
+                {% endif %}
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
                         <li><a href="{{ url_for('auth.login') }}">Login</a></li>
@@ -56,12 +65,12 @@
 {% endblock %}
 
 {% block content %}
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-        {% endfor %}
-    {% endif %}
-{% endwith %}
-{% block app_content %}{% endblock %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-info" role="alert">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    {% block app_content %}{% endblock %}
 {% endblock %}
