--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% include "bootstrap/wtf.html" as wtf %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block app_content %}
     <h1>Sign in</h1>
