--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,11 @@
             });
         }
 
+        function set_message_count(n) {
+            $('#message_count').text(n);
+            $('#message_count').css('visibility', n ? 'visible': 'hidden');
+        }
+
         $(function () {
             var timer = null;
             $(".user_popup").hover(
@@ -36,18 +41,18 @@
                         timer = null;
                         xhr = $.ajax(
                             '/user/' + elem.first().text().trim() + '/popup').done(
-                                function(data){
-                                    // Create and display the popup here.
-                                    xhr = null;
-                                    elem.popover({
-                                        trigger: 'manual',
-                                        html: true,
-                                        animation: false,
-                                        container: elem,
-                                        content: data
-                                    }).popover('show');
-                                    flask_moment_render_all();
-                                });
+                            function (data) {
+                                // Create and display the popup here.
+                                xhr = null;
+                                elem.popover({
+                                    trigger: 'manual',
+                                    html: true,
+                                    animation: false,
+                                    container: elem,
+                                    content: data
+                                }).popover('show');
+                                flask_moment_render_all();
+                            });
                     }, 1000);
                 },
                 function (event) {
@@ -56,12 +61,10 @@
                     if (timer) {
                         clearTimeout(timer);
                         timer = null;
-                    }
-                    else if (xhr) {
+                    } else if (xhr) {
                         xhr.abort();
                         xhr = null;
-                    }
-                    else {
+                    } else {
                         // Destroy the popup here
                         elem.popover('destroy');
                     }
@@ -115,6 +118,15 @@
                         <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                     {% else %}
                         <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
+                        <li>
+                            <a href="{{ url_for("main.messages") }}"> {{ _("Messages") }}
+                                {% set new_messages = current_user.new_messages() %}
+                                <span id="message_count" class="badge"
+                                      style="visibility: {% if new_messages %} visible
+                                      {% else %} hidden {% endif %}">
+                                        {{ new_messages }}
+                                    </span>
+                            </a></li>
                         <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     {% endif %}
                 </ul>
