--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -16,6 +16,14 @@
 
                 <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
 
+                {% if user != current_user %}
+                <p>
+                    <a href="{{ url_for('main.send_message', recipient=user.username) }}">
+                        {{ _("Send private message") }}
+                    </a>
+                </p>
+                {% endif %}
+
                 <!-- if the user you're looking at is you... -->
                 {% if user == current_user %}
                     <p><a href="{{ url_for('main.edit_profile') }}">Edit your profile</a></p>
