--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,30 @@
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
     <script>
+
+        {% if current_user.is_authenticated %}
+            $(function () {
+                var since = 0;
+                // Run the given function after a certain time
+                // passes from page load, in this case 10 seconds
+                setInterval(function () {
+                    // Make an asynchronous call which returns a promise
+                    $.ajax("{{ url_for("main.notifications") }}?since=" + since).done(
+                        // When the promise is fulfilled, call this function
+                        // to manipulate the notifications payload provided by
+                        // the notifications route in main
+                        function (notifications) {
+                            for (var i = 0; i < notifications.length; i++) {
+                                if (notifications[i].name == "unread_messages_count")
+                                    set_message_count(notifications[i].data);
+                                since = notifications[i].timestamp;
+                            }
+                        }
+                    );
+                }, 10000);
+            });
+        {% endif %}
+
         function translate(sourceElem, destElem, sourceLang, destLang) {
             $(destElem).html('<img src="{{ url_for('static', filename='loading.gif') }}">');
             $.post('/translate', {
@@ -28,7 +52,7 @@
 
         function set_message_count(n) {
             $('#message_count').text(n);
-            $('#message_count').css('visibility', n ? 'visible': 'hidden');
+            $('#message_count').css('visibility', n ? 'visible' : 'hidden');
         }
 
         $(function () {
